--- a/index.html
+++ b/index.html
@@ -3,34 +3,98 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/x-icon" href="./cat.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/cat.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="HandheldFriendly" content="true" />
+    <link href="./assets/styles.css" rel="stylesheet" />
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Sebastian</h1>
-    <p>
-      Sebastian, or <i>basboosa</i> like how my mom likes to call him is our
-      kitten. He is 6 months old and very moody. He thinks he is the king of the
-      world but it's time for food he becomes the cutest pet even so would give
-      him more food.
-    </p>
-    <h2>Interests</h2>
-    <ul>
-      <li>Food</li>
-      <li>Watching pigeons through the window</li>
-      <li>Pretending to be a lion</li>
-    </ul>
-    <h2>Hobbies</h2>
-    <ol>
-      <li>Scratching people for no reason</li>
-      <li>Staring at the window to be dramatic</li>
-      <li>Eating and sniffing around</li>
-    </ol>
-    <img src="./tea.gif" alt="kermit drinks tea" style="display: block" />
-    <label>
-      I couldn't find a picture of him in my computer but here's a gif of kermit
-      drinking tea instead. <br />If you wanna know how he looks like look at my
-      profile pic in discord 😻</label
-    >
+    <div class="wrapper1">
+      <div class="first_half">
+        <div class="bk">
+          <h1>Sebastian</h1>
+          <p>
+            Sebastian, or <i>basboosa</i> like how my mom likes to call him is
+            our kitten. He is 6 months old and very moody. He thinks he is the
+            king of the world but it's time for food he becomes the cutest pet
+            even so would give him more food.
+          </p>
+          <div class="image">
+            <img
+              src="./assets/cat.gif"
+              alt="kermit drinks tea"
+              style="display: block"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="scnd_half">
+        <h2>Interests</h2>
+        <ul>
+          <li>Food</li>
+          <li>Watching pigeons through the window</li>
+          <li>Pretending to be a lion</li>
+        </ul>
+        <h2>Hobbies</h2>
+        <ol>
+          <li>Scratching people for no reason</li>
+          <li>Staring at the window to be dramatic</li>
+          <li>Eating and sniffing around</li>
+        </ol>
+        <!-- spam -->
+        <h2>Random facts about cats</h2>
+        <ul>
+          <li>The oldest known pet cat existed 9,500 years ago</li>
+          <p>
+            This interesting fact about cats is guaranteed to wow at your next
+            dinner party. Did you know that originally it was thought that
+            Egyptians domesticated the cat? But in 2004, French archaeologists
+            discovered a 9,500 year old cat grave in Cyprus. This makes this the
+            oldest known pet cat and it predates Egyptian art about cats by over
+            4,000 years!
+          </p>
+          <li>Cats spend 70% of their lives sleeping</li>
+          <p>
+            If you thought cats spent a lot of their lives sleeping, you’d be
+            right. According to Veterinary Hub, Cats actually spend 70% of their
+            lives sleeping, which works out to around 13-16 hours a day. It’s a
+            cat’s life!
+          </p>
+          <li>A cat was the Mayor of an Alaskan town for 20 years</li>
+          <p>
+            An orange tabby cat called Stubbs was the mayor of Talkeetna, a
+            small town in Alaska for 20 years! He had several uncontested
+            elections and although he didn’t hold any legislative power, he was
+            loved by locals and tourists alike.
+          </p>
+          <li>The record for the longest cat ever is 48.5 inches</li>
+          <p>
+            Domestic cats are usually considered to be quite small and dainty
+            creatures. But did you know the world’s longest cat was a Maine Coon
+            called Stewie, and was measured at 48.5 inches? Whereas, the record
+            for the tallest cat belonged to Arcturus at a whopping 19.05 inches
+            tall! Those are some big cats.
+          </p>
+          <li>The richest cat in the world had £7 million</li>
+          <p>
+            The richest cat in the world according to Guinness World Records is
+            Blackie. When his millionaire owner passed away he refused to
+            recognise his family in his will and instead gave his
+            7-million-pound fortune to Blackie! We can’t believe that
+            interesting cat fact!
+          </p>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
