--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </p>
           <div class="image">
             <img
-              src="./assets/cat.gif"
+              src="./assets/cat.GIF"
               alt="kermit drinks tea"
               style="display: block"
             />
